# xplit-pay

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py
tests/: 2_ppl.xplit  test_main.py
xplitpay/: __init__.py  export.py
